test/files/neg/sip23-uninitialized-0.scala
object Test {
  val f0: 1 = _    // error: unbound placeholder
}
