test/files/neg/sip23-uninitialized-0.check
sip23-uninitialized-0.scala:2: error: unbound placeholder parameter
  val f0: 1 = _    // error: unbound placeholder
              ^
1 error
